Add iSCSI attachment support (#45)
* add swagger/generated code for iscsi attach

* add iscsi attach type

* for now, disable partition table reads for iscsi luns

* fix log fields for driver
